force-app/main/default/objects/Scale_Utility_Overage_Lines__c/Scale_Utility_Overage_Lines__c.object-meta.xml
<CustomObject>
    <description>SOX object - Stores granular details if it is above reserve or sub reserve</description>
    <label>Scale Utility Overage Lines</label>
    <nameField>
        <displayFormat>SUOL-{0000000000}</displayFormat>
        <label>Scale Utility Overage Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scale Utility Overage Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>