force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/Actual_Usage_TB__c.field-meta.xml
<CustomField>
    <fullName>Actual_Usage_TB__c</fullName>
    <label>Actual Usage (in TB or No of Users)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>