force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/Max_Commited_Usage__c.field-meta.xml
<CustomField>
    <fullName>Max_Commited_Usage__c</fullName>
    <formula>Scale_Utility_Overage__r.Max_Commited_Usage__c</formula>
    <label>Max Commited Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>