force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/Max_Contract_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Max_Contract_Consumption__c</fullName>
    <label>Max Contract Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>