force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/Minimum_Reserve_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Reserve_Consumption__c</fullName>
    <label>Minimum Reserve Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>