force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/OnDemand_CLI__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_CLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OnDemand CLI</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Scale Utility Overage Lines</relationshipLabel>
    <relationshipName>Scale_Utility_Overage_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>