force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/OnDemand_Usage_TB__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Usage_TB__c</fullName>
    <label>OnDemand Usage (in TB or No of Users)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>