force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/Scale_Utility_Overage__c.field-meta.xml
<CustomField>
    <fullName>Scale_Utility_Overage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scale Utility Overage</label>
    <referenceTo>Scale_Utility_Overage__c</referenceTo>
    <relationshipLabel>Scale Utility Overage Lines</relationshipLabel>
    <relationshipName>Scale_Utility_Overage_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>