force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/SKU_Id__c.field-meta.xml
<CustomField>
    <fullName>SKU_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Scale Utility Overage Lines</relationshipLabel>
    <relationshipName>Scale_Utility_Overage_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>