force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync Ready</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
            <value>
                <fullName>Sync Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>