force-app/main/default/objects/Scale_Utility_Overage_Lines__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Above Reserved</fullName>
            </value>
            <value>
                <fullName>Sub Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>